# tmpo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  install.sh  package.json
.claude/skills/bd/: SKILL.md
.claude/skills/cli-design/: SKILL.md
.claude/skills/demo/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: achievements.rs  betting.rs  config.rs  error.rs  main.rs  output.rs
cli/src/agent/: claude.rs  role.rs
cli/src/api/: client.rs  types.rs
cli/src/commands/: cancel.rs  config.rs  doctor.rs  list.rs  login.rs  logout.rs  logs.rs  mod.rs  proposal.rs  run.rs  status.rs  ui.rs  whoami.rs
cli/src/flair/: mod.rs  personality.rs  terminal.rs
cli/src/github/: checks.rs  pr.rs
cli/src/pipeline/: prompts.rs  runner.rs  state.rs
client/: .env.example  Dockerfile  babel-plugin-import-meta-env.cjs  babel.config.cjs  eslint.config.js  index.html  jest.config.cjs  nginx.conf  package.json  tsconfig.json  vite.config.ts
client/src/: App.test.tsx  App.tsx  config.ts  main.tsx
client/src/components/: AchievementBadges.test.tsx  AchievementBadges.tsx  AgentTheater.test.tsx  AgentTheater.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx
client/src/hooks/: useApi.ts  useAuth.ts  useWorkflowEvents.ts
client/src/pages/: CallbackPage.tsx  DashboardPage.tsx  HomePage.tsx  NewWorkflowPage.test.tsx  NewWorkflowPage.tsx  SettingsPage.tsx  WorkflowDetailPage.tsx
client/src/providers/: E2EAuthProvider.tsx
client/src/test/: setup.ts
docs/: CNAME  index.html
homebrew/: tmpo.rb
infra/: main.tf  outputs.tf  services.tf  variables.tf
landing/: index.html
proposals/: agent-run-logs.md  implement-cadence.md  open-source-readiness.md  phase-1-data-foundation-and-workflow-crud.md  phase-2-workflow-engine-and-planner.md  phase-3-dev-agent-and-github-integration.md  phase-4-ci-review-and-regression.md  phase-5-e2e-verification-and-signoff.md  phase-6-run-logs-and-web-polish.md  product-brief.md
server/: .dockerignore  .env.example  Dockerfile  bun.lockb  docker-entrypoint.sh  eslint.config.js  package.json  railway.toml  schema.yaml
server/migrations/: 1737000000000_create-users.cjs  1737100000000_create-user-settings.cjs  1737200000000_create-workflows.cjs  1737300000000_create-steps.cjs  1737400000000_create-runs.cjs  1737500000000_drop-auth0-column.cjs
server/src/: app.ts  daemon.ts  db.ts  index.ts
server/src/config/: index.ts
server/src/dao/: run-dao.test.ts  run-dao.ts  settings-dao.ts  step-dao.test.ts  step-dao.ts  user-dao.ts  workflow-dao.test.ts  workflow-dao.ts
server/src/engine/: ci-poller.test.ts  (+19 more)
(+46 files in other folders)
