[package]
name = "tmpo-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the tmpo autonomous software delivery pipeline"
license = "MIT"
repository = "https://github.com/jasonkatz/tmpo"
homepage = "https://tmpo.sh"
keywords = ["cli", "automation", "delivery", "pipeline"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
thiserror = "2"
